// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config:nuxt advanced 1`] = `
Object {
  "axios": Object {
    "browserBaseURL": "/",
  },
  "build": Object {
    "analyze": Object {
      "analyzerMode": "static",
    },
    "extend": [Function],
    "plugins": Array [
      Object {
        "apply": [Function],
      },
    ],
    "publicPath": "/static/",
    "router": Object {
      "linkActiveClass": "active",
      "linkExactActiveClass": "exact",
      "scrollBehavior": [Function],
    },
  },
  "buildDir": "../.tmp/advanced/.statusfy",
  "css": Array [
    "~assets/css/tailwind.css",
    "@fortawesome/fontawesome-svg-core/styles.css",
  ],
  "dev": true,
  "env": Object {
    "isDev": true,
  },
  "generate": Object {
    "dir": "../.tmp/advanced/dist",
    "fallback": "404.html",
    "subFolders": false,
  },
  "head": Object {
    "link": Array [
      Object {
        "color": "#3e4e88",
        "href": "/icons/safari-pinned-tab.svg",
        "rel": "mask-icon",
      },
    ],
    "meta": Array [
      Object {
        "charset": "utf-8",
      },
      Object {
        "content": "width=device-width, initial-scale=1",
        "name": "viewport",
      },
      Object {
        "content": "Statusfy",
        "name": "generator",
      },
      Object {
        "content": "",
        "hid": "description",
        "name": "description",
      },
      Object {
        "content": "",
        "hid": "description",
        "name": "description",
      },
      Object {
        "content": "Description",
        "hid": "description",
        "name": "description",
      },
    ],
    "title": "Title",
    "titleTemplate": "%s | Title",
  },
  "icon": Object {
    "iconSrc": "../.tmp/advanced/assets/icon.png",
    "sizes": Array [
      16,
      120,
      144,
      152,
      192,
      384,
      512,
    ],
  },
  "loading": Object {
    "color": "#1a2c5b",
  },
  "manifest": Object {
    "description": "Description",
    "lang": "en",
    "name": "Title",
    "publicPath": "/static/",
    "short_name": "Title",
    "start_url": "/?standalone=true&utm_source=web_app&utm_medium=pwa",
    "version": "0.0.1-alpha.1",
  },
  "meta": Object {
    "author": "Statusfy",
    "charset": "utf-8",
    "mobileApp": false,
    "mobileAppIOS": false,
    "ogDescription": false,
    "ogHost": "https://demo.statusfy.co",
    "ogTitle": false,
    "theme_color": "#1a2c5b",
  },
  "mode": "universal",
  "modules": Array [
    "~/modules/statusfy",
    "@nuxtjs/axios",
    Array [
      "nuxt-i18n",
      Object {
        "baseUrl": "https://demo.statusfy.co",
        "defaultLocale": "en",
        "detectBrowserLanguage": Object {
          "cookieKey": "title.lang_redirected",
          "useCookie": true,
        },
        "langDir": "locales/",
        "lazy": true,
        "locales": Array [
          Object {
            "code": "en",
            "file": "en.js",
            "iso": "en-US",
            "name": "English",
          },
          Object {
            "code": "en",
            "file": "en.js",
            "iso": "en-US",
            "name": "English",
          },
          Object {
            "code": "en",
            "file": "en.js",
            "iso": "en-US",
            "name": "English",
          },
          Object {
            "code": "es",
            "file": "es.js",
            "iso": "es-ES",
            "name": "Español",
          },
        ],
        "vueI18n": Object {
          "fallbackLocale": "en",
          "silentTranslationWarn": false,
        },
      },
    ],
    "@nuxtjs/pwa",
  ],
  "modulesDir": Array [
    "../../node_modules",
    "../.tmp/simple/node_modules",
    "../.tmp/cli/node_modules",
    "../.tmp/advanced/node_modules",
  ],
  "plugins": Array [
    "~/plugins/axios",
    "~/plugins/vue-svgicon",
  ],
  "rootDir": "../..",
  "server": Object {
    "host": "127.0.0.1",
    "port": 3000,
  },
  "srcDir": "../../client",
  "statusfy": Object {
    "assets": Object {
      "mainLogo": "../.tmp/advanced/assets/img/logo.svg",
    },
    "iconSizes": Array [
      16,
      120,
      144,
      152,
      192,
      384,
      512,
    ],
    "langDir": "locales/",
    "locales": Array [
      Object {
        "code": "en",
        "file": "en.json",
        "iso": "en-US",
        "name": "English",
      },
      Object {
        "code": "es",
        "file": "es.json",
        "iso": "es-ES",
        "name": "Español",
      },
    ],
    "publicFilesPath": "../.tmp/advanced/public",
    "siteConfig": Object {
      "baseUrl": "https://demo.statusfy.co",
      "build": Object {
        "isStatic": false,
      },
      "content": Object {
        "dir": "content",
        "frontMatterFormat": "yaml",
        "systems": Array [
          "cdn",
          "conversions",
          "site-delivery",
          "api",
        ],
      },
      "defaultLocale": "en",
      "description": "Description",
      "ga": "UA-XXXXXXXXX-Y",
      "head": Object {
        "link": Array [
          Object {
            "color": "#3e4e88",
            "href": "/icons/safari-pinned-tab.svg",
            "rel": "mask-icon",
          },
        ],
        "meta": Array [
          Object {
            "charset": "utf-8",
          },
          Object {
            "content": "width=device-width, initial-scale=1",
            "name": "viewport",
          },
          Object {
            "content": "Statusfy",
            "name": "generator",
          },
          Object {
            "content": "",
            "hid": "description",
            "name": "description",
          },
          Object {
            "content": "",
            "hid": "description",
            "name": "description",
          },
          Object {
            "content": "Description",
            "hid": "description",
            "name": "description",
          },
        ],
        "title": "Title",
        "titleTemplate": "%s | Title",
      },
      "locales": Array [
        Object {
          "code": "en",
          "file": "en.json",
          "iso": "en-US",
          "name": "English",
        },
        Object {
          "code": "es",
          "file": "es.json",
          "iso": "es-ES",
          "name": "Español",
        },
      ],
      "name": "title",
      "sourceDir": "../.tmp/advanced",
      "title": "Title",
    },
    "sourceDir": "../.tmp/advanced",
  },
  "workbox": Object {
    "_runtimeCaching": Array [
      Object {
        "handler": "cacheFirst",
        "method": "GET",
        "urlPattern": "/static/(?!content).*$",
      },
    ],
    "cacheId": "title",
    "globDirectory": "../.tmp/advanced/.statusfy/dist/client",
    "offlinePage": "/offline",
    "publicPath": "/static/",
    "runtimeCaching": Array [
      Object {
        "strategyOptions": Object {
          "cacheExpiration": Object {
            "maxAgeSeconds": 300,
            "maxEntries": 10,
          },
          "cacheName": "title_title_title_api",
        },
        "urlPattern": "(/static/content)?/api/v1/.*",
      },
    ],
  },
}
`;

exports[`config:nuxt cli 1`] = `
Object {
  "axios": Object {
    "browserBaseURL": "/",
  },
  "build": Object {
    "analyze": Object {
      "analyzerMode": "static",
    },
    "extend": [Function],
    "plugins": Array [
      Object {
        "apply": [Function],
      },
    ],
    "publicPath": "/static/",
    "router": Object {
      "linkActiveClass": "active",
      "linkExactActiveClass": "exact",
      "scrollBehavior": [Function],
    },
  },
  "buildDir": "../.tmp/cli/.statusfy",
  "css": Array [
    "~assets/css/tailwind.css",
    "@fortawesome/fontawesome-svg-core/styles.css",
  ],
  "dev": true,
  "env": Object {
    "isDev": true,
  },
  "generate": Object {
    "dir": "../.tmp/cli/dist",
    "fallback": "404.html",
    "subFolders": false,
  },
  "head": Object {
    "meta": Array [
      Object {
        "charset": "utf-8",
      },
      Object {
        "content": "width=device-width, initial-scale=1",
        "name": "viewport",
      },
      Object {
        "content": "Statusfy",
        "name": "generator",
      },
      Object {
        "content": "",
        "hid": "description",
        "name": "description",
      },
      Object {
        "content": "",
        "hid": "description",
        "name": "description",
      },
    ],
    "title": "Title",
    "titleTemplate": "%s | Title",
  },
  "icon": Object {
    "iconSrc": "../../client/static/icon.png",
    "sizes": Array [
      16,
      120,
      144,
      152,
      192,
      384,
      512,
    ],
  },
  "loading": Object {
    "color": "#1a2c5b",
  },
  "manifest": Object {
    "description": "",
    "lang": "en",
    "name": "Title",
    "publicPath": "/static/",
    "short_name": "Title",
    "start_url": "/?standalone=true&utm_source=web_app&utm_medium=pwa",
    "version": "0.0.1-alpha.1",
  },
  "meta": Object {
    "author": "Statusfy",
    "charset": "utf-8",
    "mobileApp": false,
    "mobileAppIOS": false,
    "ogDescription": false,
    "ogHost": "/",
    "ogTitle": false,
    "theme_color": "#1a2c5b",
  },
  "mode": "universal",
  "modules": Array [
    "~/modules/statusfy",
    "@nuxtjs/axios",
    Array [
      "nuxt-i18n",
      Object {
        "baseUrl": null,
        "defaultLocale": "en",
        "detectBrowserLanguage": Object {
          "cookieKey": "title.lang_redirected",
          "useCookie": true,
        },
        "langDir": "locales/",
        "lazy": true,
        "locales": Array [
          Object {
            "code": "en",
            "file": "en.js",
            "iso": "en-US",
            "name": "English",
          },
          Object {
            "code": "en",
            "file": "en.js",
            "iso": "en-US",
            "name": "English",
          },
        ],
        "vueI18n": Object {
          "fallbackLocale": "en",
          "silentTranslationWarn": false,
        },
      },
    ],
    "@nuxtjs/pwa",
  ],
  "modulesDir": Array [
    "../../node_modules",
    "../.tmp/simple/node_modules",
    "../.tmp/cli/node_modules",
  ],
  "plugins": Array [
    "~/plugins/axios",
    "~/plugins/vue-svgicon",
  ],
  "rootDir": "../..",
  "server": Object {
    "host": "127.0.0.1",
    "port": 3000,
  },
  "srcDir": "../../client",
  "statusfy": Object {
    "assets": Object {
      "mainLogo": "../../client/assets/img/logo.svg",
    },
    "iconSizes": Array [
      16,
      120,
      144,
      152,
      192,
      384,
      512,
    ],
    "langDir": "locales/",
    "locales": Array [
      Object {
        "code": "en",
        "file": "en.json",
        "iso": "en-US",
        "name": "English",
      },
    ],
    "publicFilesPath": "../.tmp/cli/public",
    "siteConfig": Object {
      "baseUrl": "/",
      "build": Object {
        "isStatic": false,
      },
      "content": Object {
        "dir": "content",
        "systems": Array [
          "api",
          "cdn",
          "dns",
          "site-delivery",
        ],
      },
      "defaultLocale": "en",
      "description": "",
      "locales": Array [
        Object {
          "code": "en",
          "file": "en.json",
          "iso": "en-US",
          "name": "English",
        },
      ],
      "name": "title",
      "sourceDir": "../.tmp/cli",
      "title": "Title",
    },
    "sourceDir": "../.tmp/cli",
  },
  "workbox": Object {
    "_runtimeCaching": Array [
      Object {
        "handler": "cacheFirst",
        "method": "GET",
        "urlPattern": "/static/(?!content).*$",
      },
    ],
    "cacheId": "title",
    "globDirectory": "../.tmp/cli/.statusfy/dist/client",
    "offlinePage": "/offline",
    "publicPath": "/static/",
    "runtimeCaching": Array [
      Object {
        "strategyOptions": Object {
          "cacheExpiration": Object {
            "maxAgeSeconds": 300,
            "maxEntries": 10,
          },
          "cacheName": "title_title_api",
        },
        "urlPattern": "(/static/content)?/api/v1/.*",
      },
    ],
  },
}
`;

exports[`config:nuxt simple 1`] = `
Object {
  "axios": Object {
    "browserBaseURL": "/",
  },
  "build": Object {
    "analyze": Object {
      "analyzerMode": "static",
    },
    "extend": [Function],
    "plugins": Array [
      Object {
        "apply": [Function],
      },
    ],
    "publicPath": "/static/",
    "router": Object {
      "linkActiveClass": "active",
      "linkExactActiveClass": "exact",
      "scrollBehavior": [Function],
    },
  },
  "buildDir": "../.tmp/simple/.statusfy",
  "css": Array [
    "~assets/css/tailwind.css",
    "@fortawesome/fontawesome-svg-core/styles.css",
  ],
  "dev": true,
  "env": Object {
    "isDev": true,
  },
  "generate": Object {
    "dir": "../.tmp/simple/dist",
    "fallback": "404.html",
    "subFolders": false,
  },
  "head": Object {
    "meta": Array [
      Object {
        "charset": "utf-8",
      },
      Object {
        "content": "width=device-width, initial-scale=1",
        "name": "viewport",
      },
      Object {
        "content": "Statusfy",
        "name": "generator",
      },
      Object {
        "content": "",
        "hid": "description",
        "name": "description",
      },
    ],
    "title": "Title",
    "titleTemplate": "%s | Title",
  },
  "icon": Object {
    "iconSrc": "../../client/static/icon.png",
    "sizes": Array [
      16,
      120,
      144,
      152,
      192,
      384,
      512,
    ],
  },
  "loading": Object {
    "color": "#1a2c5b",
  },
  "manifest": Object {
    "description": "",
    "lang": "en",
    "name": "Title",
    "publicPath": "/static/",
    "short_name": "Title",
    "start_url": "/?standalone=true&utm_source=web_app&utm_medium=pwa",
    "version": "0.0.1-alpha.1",
  },
  "meta": Object {
    "author": "Statusfy",
    "charset": "utf-8",
    "mobileApp": false,
    "mobileAppIOS": false,
    "ogDescription": false,
    "ogHost": "/",
    "ogTitle": false,
    "theme_color": "#1a2c5b",
  },
  "mode": "universal",
  "modules": Array [
    "~/modules/statusfy",
    "@nuxtjs/axios",
    Array [
      "nuxt-i18n",
      Object {
        "baseUrl": null,
        "defaultLocale": "en",
        "detectBrowserLanguage": Object {
          "cookieKey": "title.lang_redirected",
          "useCookie": true,
        },
        "langDir": "locales/",
        "lazy": true,
        "locales": Array [
          Object {
            "code": "en",
            "file": "en.js",
            "iso": "en-US",
            "name": "English",
          },
        ],
        "vueI18n": Object {
          "fallbackLocale": "en",
          "silentTranslationWarn": false,
        },
      },
    ],
    "@nuxtjs/pwa",
  ],
  "modulesDir": Array [
    "../../node_modules",
    "../.tmp/simple/node_modules",
  ],
  "plugins": Array [
    "~/plugins/axios",
    "~/plugins/vue-svgicon",
  ],
  "rootDir": "../..",
  "server": Object {
    "host": "127.0.0.1",
    "port": 3000,
  },
  "srcDir": "../../client",
  "statusfy": Object {
    "assets": Object {
      "mainLogo": "../../client/assets/img/logo.svg",
    },
    "iconSizes": Array [
      16,
      120,
      144,
      152,
      192,
      384,
      512,
    ],
    "langDir": "locales/",
    "locales": Array [
      Object {
        "code": "en",
        "iso": "en-US",
        "name": "English",
      },
    ],
    "publicFilesPath": null,
    "siteConfig": Object {
      "baseUrl": "/",
      "build": Object {
        "isStatic": false,
      },
      "content": Object {
        "dir": "content",
        "systems": Array [
          "api",
          "cdn",
          "dns",
          "site-delivery",
        ],
      },
      "defaultLocale": "en",
      "description": "",
      "locales": Array [
        Object {
          "code": "en",
          "iso": "en-US",
          "name": "English",
        },
      ],
      "name": "title",
      "sourceDir": "../.tmp/simple",
      "title": "Title",
    },
    "sourceDir": "../.tmp/simple",
  },
  "workbox": Object {
    "_runtimeCaching": Array [
      Object {
        "handler": "cacheFirst",
        "method": "GET",
        "urlPattern": "/static/(?!content).*$",
      },
    ],
    "cacheId": "title",
    "globDirectory": "../.tmp/simple/.statusfy/dist/client",
    "offlinePage": "/offline",
    "publicPath": "/static/",
    "runtimeCaching": Array [
      Object {
        "strategyOptions": Object {
          "cacheExpiration": Object {
            "maxAgeSeconds": 300,
            "maxEntries": 10,
          },
          "cacheName": "title_api",
        },
        "urlPattern": "(/static/content)?/api/v1/.*",
      },
    ],
  },
}
`;
